--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="sidebar">
       <nav>
         <ul>
-          <li><a href="/"></a>Home</li>
-          <li><a href="/intro.html"></a>My Intro</li>
-          <li><a href="/services.html"></a>Services</li>
-          <li><a href="/blog.html"></a>Blog</li>
-          <li><a href="/contact.html"></a>Contact Me</li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/intro.html">My Intro</a></li>
+          <li><a href="/services.html">Services</a></li>
+          <li><a href="/blog.html">Blog</a></li>
+          <li><a href="/contact.html">Contact Me</a></li>
         </ul>
       </nav>
     </div>
