--- a/intro.html
+++ b/intro.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rupesh Kumar - Web Developer, Programmer</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="sidebar">
-        <nav>
-          <ul>
-            <li><a herf="/"></a>Home</li>
-            <li><a herf="/intro.html"></a>My Intro</li>
-            <li><a herf="/services.html"></a>Services</li>
-            <li><a herf="/blog.html"></a>Blog</li>
-            <li><a herf="/contact.html"></a>Contact Me</li>
-          </ul>
-        </nav>
-      </div>
-      <div class="main">
-        <div class="infoContainer">
-          <div class="devInfo">
-            <div class="hello">Hi There!</div>
-            <div class="name">It's me Rupesh</div>
-            <div class="about">Developer, Self Employeed, Tech Enthusiast</div>
-            <div class="aboutMore">I am a developer, I love to write code</div>
-            <div class="buttons">
-              <button>Download CV</button>
-              <button>Contact me</button>
-            </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rupesh Kumar - Web Developer, Programmer</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="sidebar">
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/intro.html">My Intro</a></li>
+          <li><a href="/services.html">Services</a></li>
+          <li><a href="/blog.html">Blog</a></li>
+          <li><a href="/contact.html">Contact Me</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="main">
+      <div class="infoContainer">
+        <div class="devInfo">
+          <div class="hello">Hi There!</div>
+          <div class="name">It's me Rupesh</div>
+          <div class="about">Developer, Self Employeed, Tech Enthusiast</div>
+          <div class="aboutMore">I am a developer, I love to write code</div>
+          <div class="buttons">
+            <button>Download CV</button>
+            <button>Contact me</button>
           </div>
-          <div class="devPic"><img src="DSC_0563.JPG" alt="Rupesh" /></div>
         </div>
+        <div class="devPic"><img src="DSC_0563.JPG" alt="Rupesh" /></div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
